[project]
name = "sugar-fight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "gymnasium>=1.2.0",
    "requests>=2.32.5",
    "stable-baselines3[extra]>=2.7.0",
    "win10toast-persist>=0.10.1",
]
